<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/unit_stats_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/unit_stats_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/scroll_gradient" >

        <TextView
            android:id="@+id/rules_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rules_header"
            android:textAppearance="@style/header_text" />

        <View
            android:id="@+id/firstDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:background="#000000" />

        <TextView
            android:id="@+id/rules_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/all_the_rules"
            android:textAppearance="@style/dialog_message_style" />

        <TextView
            android:id="@+id/unit_stats_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/unit_stats_header"
            android:textAppearance="@style/header_text" />

        <View
            android:id="@+id/thirdDivider"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp"
            android:background="#000000" />
        
        <LinearLayout
            android:id="@+id/units_col"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            </LinearLayout>
    </LinearLayout>

</ScrollView>